starter code, boiler plate, starting design on main page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,18 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer components {
+  .navbar-links {
+    @apply transition hover:text-white/50 underline;
+  }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+:root {
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 }
 
 body {
@@ -26,8 +24,14 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+h1 {
+  @apply text-2xl lg:text-4xl font-bold;
+}
+
+h2 {
+  @apply text-xl lg:text-3xl font-bold;
+}
+
+h3 {
+  @apply text-lg lg:text-2xl font-bold;
 }
