--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,14 @@ h3 {
   @apply text-lg lg:text-2xl font-bold;
 }
 
+h4 {
+  @apply text-lg lg:text-xl font-bold;
+}
+
+h5 {
+  @apply text-lg lg:text-lg font-bold;
+}
+
 a {
   text-decoration: none;
 }
