--- a/src/app/posts/[slug]/styles.css
+++ b/src/app/posts/[slug]/styles.css
@@ -83,9 +83,10 @@ img.notion-page-icon {
 }
 
 .notion-list {
-  margin: 0;
-  margin-block-start: 0.6em;
-  margin-block-end: 0.6em;
+  /* margin: 0; */
+  /* margin-block-start: 0.6em; */
+  /* margin-block-end: 0.6em; */
+  @apply ml-2;
 }
 
 .notion-list-disc {
